# Homework_web_8

./: config.ini  connect.py  crud.py  main.py  models.py  pyproject.toml
part_1/: config.ini  crud.py  main.py  models.py
part_2/: config_db.ini  connect.py  consumer.py  consumer_email.py  consumer_sms.py  models.py  prod_separator.py  produser.py
